package com.jkos.hackathon.constant;

public enum ResumeStatus {

    PENDING,
    APPROVED,
    REJECTED,
    ;

}
